fix_28658: make title and author edition more visible when publishing

--- a/packages/client/src/index.less
+++ b/packages/client/src/index.less
@@ -290,7 +290,7 @@ z-index: 3;
 }
 
 .mb-20 {
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 .checkbox-col {
